update front page description

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <meta name="description" content="Nathan Heller">
-<meta name="keywords" content="java, python, android, software, developer, web, javascript, html, blog, personal">
+<meta name="keywords" content="software, developer, designer, web, javascript, html, css, blog, resume, app, java, python, android, ios, apple, ui, ux">
 
 <base href="https://naheller.github.io/">
 
@@ -54,13 +54,13 @@
   <h3 class="intro">read | write | code | roam</h3>
   
   
-  <h4 class="description">I&rsquo;m Nathan Heller, a Computer Science student in Oregon.</h4>
+  <h4 class="description">I&rsquo;m Nathan Heller, a Computer Science student at the University of Oregon and an Internal Training Intern at <a href="https://www.cbtnuggets.com">CBT Nuggets</a>.</h4>
   
   
   <h4 class="description">My current projects include an Android app called <a href="https://github.com/naheller/Leafit-Android">Leafit</a> and this website, which is statically generated using <a href="https://gohugo.io">Hugo</a> and hosted on GitHub Pages.</h4>
   
   
-  <h4 class="description">I love to play guitar, listen to podcasts, and read sci-fi novels.</h4>
+  <h4 class="description">Currently reading: <a href="https://www.goodreads.com/book/show/22609522-red-notice">Red Notice</a></h4>
   
 </section>
 
