--- a/projects/index.html
+++ b/projects/index.html
@@ -28,7 +28,6 @@
 
 
 
-
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
 <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
@@ -41,14 +40,46 @@
 <div class="container">
 
 
-<section id="list-pane" class="row list">
-  <ul >
+<header class="row text-left title">
+  <h1 class="title"></h1>
+</header>
+<section id="category-pane" class="row meta">
+  
+</section>
+<section id="content-pane" class="row">
+  <div class="col-md-12 text-justify content">
     
-  </ul>
+
+<h1 id="projects">Projects</h1>
+
+<hr />
+
+<h2 id="leafit">Leafit</h2>
+
+<p>Leafit is an iOS and Android camera app that uses self-teaching image recognition technology to identify photos of leaves. Users can pick up interesting leaves and access useful information about the plants and trees that they come from.</p>
+
+<p>I am developing the <a href="https://github.com/naheller/Leafit-Android">Android</a> version while my partner works on the <a href="https://github.com/alecsavvy/leafit-ios">iOS</a> version.</p>
+
+<p>More updates to come!</p>
+
+  </div>
+</section>
+<section id="tag-pane" class="row meta">
+  
 </section>
 
 
+
+
 <section id="menu-pane" class="row menu text-center">
+  
+  
+  <span><a class="menu-item" href="https://naheller.github.io/resume/">&lt; prev | </a></span>
+  
+  
+  <span><a class="menu-item" href="/"></a></span>
+  
+  
   
   <h4 class="text-center"><a class="menu-item" href="https://naheller.github.io/">home</a></h4>
 </section>
@@ -75,4 +106,5 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
