--- a/resume/index.html
+++ b/resume/index.html
@@ -28,7 +28,6 @@
 
 
 
-
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
 <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
@@ -41,14 +40,92 @@
 <div class="container">
 
 
-<section id="list-pane" class="row list">
-  <ul >
+<header class="row text-left title">
+  <h1 class="title"></h1>
+</header>
+<section id="category-pane" class="row meta">
+  
+</section>
+<section id="content-pane" class="row">
+  <div class="col-md-12 text-justify content">
     
-  </ul>
+
+<h1 id="nathan-heller">Nathan Heller</h1>
+
+<p>naheller@gmail.com<br />
+linkedin.com/in/nathanheller<br />
+github.com/naheller</p>
+
+<p>(858) 735-2758<br />
+Eugene, OR</p>
+
+<hr />
+
+<h2 id="education">Education</h2>
+
+<h3 id="bs-computer-science-2019">BS, Computer Science &mdash; 2019</h3>
+
+<p>University of Oregon</p>
+
+<h3 id="ba-english-literature-2013">BA, English Literature &mdash; 2013</h3>
+
+<p>University of San Diego</p>
+
+<h3 id="tefl-certificate-2014">TEFL Certificate &ndash; 2014</h3>
+
+<p><em>Teaching English as a Foreign Language</em><br />
+University of California, San Diego</p>
+
+<hr />
+
+<h2 id="work-experience">Work Experience</h2>
+
+<h3 id="cbt-nuggets">CBT Nuggets</h3>
+
+<p>Internal Training Intern &mdash; 2017 (Current)</p>
+
+<h3 id="marvel-entertainment">Marvel Entertainment</h3>
+
+<p>Business Development Intern &mdash; 2013</p>
+
+<p><em>Coordinated media assets and editorial production schedules for senior staff. Contributed research and draft materials for the 2014 &ldquo;All-New Marvel NOW!&rdquo; ad campaign. Wrote creative content for promotional trading cards and animated YouTube teasers.</em></p>
+
+<h3 id="kpbs">KPBS</h3>
+
+<p>Video Production Intern &mdash; 2013</p>
+
+<p><em>Assisted in the production of KPBS Evening Edition, a televised news broadcast based in San Diego. Operated studio cameras, audio equipment, lighting mounts and many other tools during live and recorded segments.</em></p>
+
+<h3 id="the-vista-newspaper">The Vista Newspaper</h3>
+
+<p>Opinion Editor &mdash; 2012</p>
+
+<p><em>Assigned story pitches to writers and directly oversaw collaborative editing process. Designed a five-page section from articles, graphics, and advertisements using Adobe InDesign.</em></p>
+
+<h3 id="san-diego-magazine">San Diego Magazine</h3>
+
+<p>Editorial Intern &mdash; 2012</p>
+
+<p><em>Wrote for and edited the magazine&rsquo;s online blog using the Rivista CMS. Researched and cataloged local businesses in order to keep advertisement slots up-to-date.</em></p>
+
+  </div>
+</section>
+<section id="tag-pane" class="row meta">
+  
 </section>
 
 
+
+
 <section id="menu-pane" class="row menu text-center">
+  
+  
+  
+  <span><a class="menu-item" href="/"></a></span>
+  
+  
+  <span><a class="menu-item" href="https://naheller.github.io/projects/"> | next &gt;</a></span>
+  
   
   <h4 class="text-center"><a class="menu-item" href="https://naheller.github.io/">home</a></h4>
 </section>
@@ -75,4 +152,5 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
