--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 
 
 
-
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
 <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
@@ -52,17 +51,22 @@
 
 <section id="info-pane" class="row text-center info">
   
+  
   <h3 class="intro">read | write | code | roam</h3>
   
+
   
   <h4 class="description">I&rsquo;m Nathan Heller, a Computer Science student at the University of Oregon and an Internal Training Intern at <a href="https://www.cbtnuggets.com">CBT Nuggets</a>.</h4>
   
+
   
   <h4 class="description">My current projects include an Android app called <a href="https://github.com/naheller/Leafit-Android">Leafit</a> and this website, which is statically generated using <a href="https://gohugo.io">Hugo</a> and hosted on GitHub Pages.</h4>
   
+
   
-  <h4 class="description">Currently reading: <a href="https://www.goodreads.com/book/show/22609522-red-notice">Red Notice</a></h4>
+  <h4 class="description">Currently reading: <a href="https://www.goodreads.com/book/show/27161156-hillbilly-elegy">Hillbilly Elegy</a></h4>
   
+
 </section>
 
 
@@ -97,8 +101,6 @@
 <section id="main-menu-pane" class="row text-center main-menu">
   
   <h4><a class="menu-item" href="/blog/">blog</a></h4>
-  
-  <h4><a class="menu-item" href="/about/">about</a></h4>
   
   <h4><a class="menu-item" href="/projects/">projects</a></h4>
   
