--- a/resume/index.html
+++ b/resume/index.html
@@ -108,6 +108,10 @@ University of California, San Diego</p>
 
 <p><em>Wrote for and edited the magazine&rsquo;s online blog using the Rivista CMS. Researched and cataloged local businesses in order to keep advertisement slots up-to-date.</em></p>
 
+<hr />
+
+<p>Download a PDF copy of my resume <a href="NathanHeller-Resume.pdf">here</a>.</p>
+
   </div>
 </section>
 <section id="tag-pane" class="row meta">
